# qoi-img

./: .gitignore  Cargo.toml  LICENSE  README.md  checkerboard.qoi  test.qoi
.gitea/workflows/: build.yaml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
